# coar

./: .gitignore  CMakeLists.txt  ffield.lut.8
conf/: 1.json  ecdag_decode  ecdag_decode_1020_cr  ecdag_decode_1020_cr_7  ecdag_decode_1020_cr_8  ecdag_decode_1020_ecpipe  ecdag_decode_1020_ppr  ecdag_decode_1020_ppr_1  ecdag_decode_1020_ppr_2  ecdag_decode_1020_ppr_3  ecdag_decode_2  ecdag_decode_3  ecdag_decode_5  ecdag_decode_7  ecdag_decode_8  ecdag_decode_9  ecdag_decode_ppr_2  ecdag_decode_ppr_2_temp  ecdag_encode  ecdag_encode_1020   ecdag_encode_1020_0  ecdag_encode_1020_1  ecdag_encode_1020_2  ecdag_encode_n_6_k_4_0  ecdag_encode_n_6_k_4_1  fileMeta
ecdag/: monitor.py  run_4_coar.sh  run_4_cr.sh  run_4_fullpair.sh  run_4_hpca25.sh  run_4_ppr.sh  run_4_rp.sh  run_ecdag.py  start_monitor.sh  stop_monitor.sh
src/: CMakeLists.txt  ECAgent.cc  ECClient.cc  ECCoordinator.cc  ECTest.cc  ECTestBlockSize.cc  ECTestNproc.cc  HDFSDemo.cc
src/common/: BlockingQueue.hh  CMakeLists.txt  Config.cc  Config.hh  Coordinator.cc  Coordinator.hh  ECDataPacket.cc  ECDataPacket.hh  ECInputStream.cc  ECInputStream.hh  ECOutputStream.cc  ECOutputStream.hh  ECPipe.cc  ECPipeFG.cc  ECWorker.cc  ECWorker.hh  FSObjOutputStream.cc  FSObjOutputStream.hh  FileMeta.cc  FileMeta.hh  ObjBuffer.hh  SSEntry.hh  StripeStore.cc  StripeStore.hh  logger.hh
src/ec/: ECPlan.cc  ECPlan.hh  RSPlan.cc  RSPlan.hh
src/fs/: CMakeLists.txt  FSUtil.cc  FSUtil.hh  HDFSHandler.cc  HDFSHandler.hh  Hadoop3.cc
src/inc/: include.hh
src/protocol/: AGCommand.cc  AGCommand.hh  CoorCommand.cc  CoorCommand.hh
(+63 files in other folders)
